# cxxg

./: .env  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
cmake/: AddCxxgTest.cmake  (+1 more)
games/rogue/: CMakeLists.txt
games/rogue/data/: crafting_db.yaml  creature_db.json  creature_db_schema.json  entity_db.json  entity_db_schema.json  game_config.json  game_config_schema.json  item_db.json  item_db_schema.json  level.cfg  level_config_schema.json  level_db.json  npc_test_level.lvl  test_game_config.json  tiles_db.json  validator.py
games/rogue/data/levels/: arachnoth_broot_tunnel.json  arachnoth_broot_tunnel.tmj  areana.json  areana.map  arena.json  arena.map  blob_cave.cfg  blob_cave.json  chest_room.json  chest_room.map  default.json  default.map  default.tmj  fat_rat.json  fat_rat.map  initial_level.json  l1_mystic_gardens.json  l1_sewers.json  l1_spiders.json  l2_mystic_grove.json  mystic_garden.cfg  mystic_garden.json  mystic_garden_meadow.cfg  mystic_garden_meadow.json  mystic_grove.cfg  mystic_grove.json  npc_test_level.json  rat_pit.json  rat_pit.map  sewers.cfg  sewers.json  skeleton_dungeon.cfg  skeleton_dungeon.json  spider_lair.cfg  spider_lair.json  spider_nest.cfg  spider_nest.json  troll_dungeon.cfg  troll_dungeon.json
games/rogue/data/levels/arachnoth/: brood_tunnel.json  l2.json  spider_lair.cfg  spider_lair.json
games/rogue/data/levels/blobs/: blob_cave.cfg
games/rogue/data/levels/fungus/: cave_entry.json  cave_entry.tmj  l1.json  small_cave.cfg  small_cave.json  small_cave_entry.json  small_cave_entry.tmj
games/rogue/data/levels/mystic_grove/: l1.json  l2.json  mystic_garden.cfg  mystic_garden_meadow.json  mystic_grove.json
games/rogue/data/levels/sewers/: fat_rat.json  fat_rat.tmj  rat_pit.json
games/rogue/data/levels/troll_dungeon/: chest_room.json  chest_room.map  skeleton_dungeon.cfg  skeleton_dungeon.json  troll_dungeon.cfg
games/rogue/data/schemas/: buffs_schema.json  common_types_schema.json  crafting_db_schema.json  creature_db_schema.json  entity_db_schema.json  game_config_schema.json  item_db_schema.json  item_effects_schema.json  level_config_schema.json  level_db_schema.json  loot_tb_schema.json
games/rogue/data/tiled_maps/: .gitignore  arachnoth_broot_tunnel.tmx  default.tmx  fungus_cave_entry.tmx  fungus_small_cave_entry.tmx  sewers_fat_rat.tmx  tile_id_map.json  tiled_id_map.json  tiles.tsx
games/rogue/include/: Context.h  Entity.h  EventHub.h  Game.h  History.h  Inventory.h  Item.h  ItemDatabase.h  Level.h  LevelGenerator.h  NPCEntity.h  Parser.h  Renderer.h  Tile.h  UIController.h  UIListSelect.h
games/rogue/include/Components/: AI.h  Buffs.h  Entity.h  Items.h  Level.h  Player.h  Stats.h  Transform.h  Visual.h
games/rogue/include/Systems/: AgilitySystem.h  AttackAISystem.h  DeathSystem.h  PlayerSystem.h  RegenSystem.h  System.h  WanderAISystem.h
games/rogue/include/rogue/: BitOps.h  Context.h  CraftingDatabase.h  CraftingHandler.h  CreatureDatabase.h  EffectInfo.h  Entity.h  EntityAssemblers.h  EntityDatabase.h  Equipment.h  Event.h  EventHub.h  Game.h  GameConfig.h  GameWorld.h  History.h  Inventory.h  InventoryHandler.h  Item.h  ItemDatabase.h  ItemEffect.h  ItemEffectImpl.h  ItemPrototype.h  ItemSpecialization.h  ItemType.h  JSON.h  JSONHelpers.h  Level.h  LevelDatabase.h  LevelGenerator.h  LootTable.h  NPCEntity.h  Parser.h  RenderEventCollector.h  Renderer.h  SaveGame.h  Serialization.h  StrongType.h  Tile.h  Types.h  (+2 more)
games/rogue/include/rogue/Components/: AI.h  Buffs.h  Combat.h  Entity.h  Helpers.h  Items.h  LOS.h  Level.h  Player.h  RaceFaction.h  Serialization.h  Stats.h  Transform.h  Visual.h
games/rogue/python/pyrogue/: entity_db.py  item_db.py  tile_edit.py  tiles_db.py  tools.py
games/rogue/python/test/: CMakeLists.txt
games/rogue/python/xzen/: schema.py  ui.py  ui_gen.py
games/rogue/scripts/: clean_cfg.py  entity_db_post_process.py  entity_viewer.py  loot_viewer.py  rgb.py  schema_processor.py  schema_ui.py  setup_tiled_maps.sh  tiled_id_map_gen.py  validator.py  yaml_json.py
games/rogue/src/: CraftingDatabase.cpp  CraftingHandler.cpp  CreatureDatabase.cpp  EffectInfo.cpp  Entity.cpp  EntityAssemblers.cpp  EntityDatabase.cpp  Equipment.cpp  Event.cpp  Game.cpp  GameConfig.cpp  GameWorld.cpp  History.cpp  Inventory.cpp  InventoryHandler.cpp  Item.cpp  ItemDatabase.cpp  ItemEffect.cpp  ItemEffectImpl.cpp  ItemPrototype.cpp  ItemSpecialization.cpp  ItemType.cpp  JSON.cpp  JSONHelpers.cpp  Level.cpp  LevelDatabase.cpp  LevelGenerator.cpp  LootTable.cpp  NPCEntity.cpp  Parser.cpp  RenderEventCollector.cpp  Renderer.cpp  SaveGame.cpp  Serialization.cpp  UIController.cpp  UIListSelect.cpp  main.cpp
games/rogue/src/Components/: AI.cpp  Buffs.cpp  Combat.cpp  Entity.cpp  Level.cpp  Player.cpp  RaceFaction.cpp  Stats.cpp  Visual.cpp
games/rogue/src/Systems/: AgilitySystem.cpp  AttackAISystem.cpp  CombatSystem.cpp  DeathSystem.cpp  LOSSystem.cpp  MovementSystem.cpp  NPCSystem.cpp  PlayerSystem.cpp  RegenSystem.cpp  SearchAISystem.cpp  StatsSystem.cpp  WanderAISystem.cpp
games/rogue/src/UI/: Buffs.cpp  CommandLine.cpp  CompHelpers.cpp  Controller.cpp  Controls.cpp  Crafting.cpp  Decorator.cpp  Equipment.cpp  Frame.cpp  History.cpp  Interact.cpp  Inventory.cpp  Item.cpp  ItemSelect.cpp  ListSelect.cpp  Menu.cpp  SelectBox.cpp  Stats.cpp  TargetUI.cpp  TextBox.cpp  Tooltip.cpp  Widget.cpp  WindowContainer.cpp  WordWrap.cpp
games/rogue/test/: CMakeLists.txt  main.cpp  npc_test.cpp  perlin_noise.h  proc_gen.cpp
games/rogue/test/a_star_state_space_exploration/: a_star.py  actions.py  asse.py  config.py  obj_dbs.py  state.py  test.sh
games/rogue/tools/: loot_info.cpp  map_viewer.cpp
games/tetris/: CMakeLists.txt
games/tetris/include/: Field.h  Tetris.h  Tetromino.h
games/tetris/src/: Field.cpp  Tetris.cpp  Tetromino.cpp  main.cpp
lib/: CMakeLists.txt
lib/include/cxxg/: Game.h  Row.h  Screen.h  Types.h  Utils.h
lib/src/: Game.cpp  Row.cpp  Screen.cpp  Types.cpp  Utils.cpp  UtilsUnix.cpp  UtilsWin.cpp
test/lib/: CMakeLists.txt  accesses.cpp  colors.cpp  hello_world.cpp
(+102 files in other folders)
